# view-psql

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
view_psql/: cli.py
view_psql.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
